Fixed date layout issue

--- a/_sass/ash/layout/_post-list.scss
+++ b/_sass/ash/layout/_post-list.scss
@@ -48,9 +48,10 @@ POST LIST
             line-height: 1.2;
         }
 
-        &__date {
+        .c-post__date {
             padding: .5rem 0 0;
             font-size: 1.4rem;
+            text-align: left;
         }
     }
 }
